--- a/CSS-Files/homepagediv2.css
+++ b/CSS-Files/homepagediv2.css
@@ -1,27 +1,23 @@
-body, html{
-    height: 100%;
-    margin:0;
-    
-    
-  }
-  
-#header{
-    width: 100%;
-    height: 1000px;
-    overflow: auto;
-    background-image: url("../Pictures/john-higgitt--6oZ1VIsEbs-unsplash.jpg");
-   background-attachment: fixed;
-   background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-#main{
-    width: 100%;
-    height: 2000px;
-    
-    background-image: url("../Pictures/Capture.PNG");
+body,
+html {
+  height: 100%;
+  margin: 0;
 }
 
+#header {
+  width: 100%;
+  height: 1000px;
+  overflow: auto;
+  background-image: url("../Pictures/john-higgitt--6oZ1VIsEbs-unsplash.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#main {
+  width: 100%;
+  background-image: url("../Pictures/Capture.PNG");
+}
 
 /*----------This is NavBar i cili eshte njejt me homepage----*/
 #navbar {
@@ -33,111 +29,130 @@ body, html{
   transition: top 0.3s; /* Transition effect when sliding down (and up) */
 }
 #navbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
-  }
-  
-  #navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+}
+
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
 /*----------This is buttonat i cili eshte njejt me homepage----*/
-  #button-form{
-    /* border: 2px solid black; */
-    margin-left: 1%;
-    margin-top: 0.2%;
-    font-family: 'Lato', sans-serif;
-    width: 5%;
-  }
-  #button-form1{
-   /* border: 2px solid black; */
-   font-family: 'Lato', sans-serif;
-   margin-left: 0.5%;
-   margin-top: 0.2%;
-   width: 5%;
-   height: 5%;
- }
-  
+#button-form {
+  /* border: 2px solid black; */
+  margin-left: 1%;
+  margin-top: 0.2%;
+  font-family: "Lato", sans-serif;
+  width: 5%;
+}
+#button-form1 {
+  /* border: 2px solid black; */
+  font-family: "Lato", sans-serif;
+  margin-left: 0.5%;
+  margin-top: 0.2%;
+  width: 5%;
+  height: 5%;
+}
 
- h1{
-     margin: 0;
-     color: white;
-     padding-top: 10%;
-     padding-left:25%;
-     font-family: 'Nanum Gothic Coding', monospace;
-     font-weight: 400;
- }
- p{
-   margin-left: 10%;
-   margin-right: 10%;
-   color: white;
-   font-family: 'Cutive Mono', monospace;
-   font-size: 20px;
-   text-align: justify;
- }
- p::first-letter{
-   font-size: 30px;
- }
- h1::first-letter{
-   font-size: 45px;
- }
+h1 {
+  margin: 0;
+  color: white;
+  padding-top: 10%;
+  padding-left: 25%;
+  font-family: "Nanum Gothic Coding", monospace;
+  font-weight: 400;
+}
+p {
+  margin-left: 10%;
+  margin-right: 10%;
+  color: white;
+  font-family: "Cutive Mono", monospace;
+  font-size: 20px;
+  text-align: justify;
+}
+p::first-letter {
+  font-size: 30px;
+}
+h1::first-letter {
+  font-size: 45px;
+}
 
- #dio{
-   text-decoration: none;
-   color: white;
-   border: 1px solid white;
-   padding: 10px;
-   float: right;
-   margin-right: 10%;
- }
- #position{
-   position: absolute;
-   top:8%;
-    left: 21%;
-    /* border:1px solid white; */
-    width: 1000px;  
-    height: 700px;
-    color: black;
-  
-  
-  }
+#dio {
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  padding: 10px;
+  float: right;
+  margin-right: 10%;
+}
+#position {
+  position: absolute;
+  top: 8%;
+  left: 21%;
+  height: 700px;
+  color: black;
+}
 
-
-  /* Google Fonts */
+/* Google Fonts */
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
 /* Global */
 
-
-.line-1{
-    position: relative;
-    top: 50%;  
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
-    font-weight: bold;
-    color: white;
+.line-1 {
+  position: relative;
+  top: 50%;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255, 255, 255, 0.75);
+  font-size: 180%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);
+  font-weight: bold;
+  color: white;
 }
 
 /* Animation */
-.anim-typewriter{
+.anim-typewriter {
   animation: typewriter 4s steps(50) 1s 1 normal both,
-             blinkTextCursor 500ms steps(50) infinite normal;
+    blinkTextCursor 500ms steps(50) infinite normal;
 }
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 24em;}
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: rgba(255, 255, 255, 0.75);
+  }
+  to {
+    border-right-color: transparent;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #position {
+    left: 10px;
+  }
+
+  #main h1 {
+    padding-left: 10%;
+  }
+  .line-1 {
+    
+    white-space: pre-wrap;
+    overflow: hidden;
+  }
+
+  
+  #navbar a {
+    min-width: 24%;
+  }
 }
