--- a/CSS-Files/homepagediv3.css
+++ b/CSS-Files/homepagediv3.css
@@ -10,14 +10,14 @@ body, html{
     height: 1000px;
     overflow: auto;
     background-image: url("../Pictures/jordan-whitt-b8rkmfxZjdU-unsplash.jpg");
-   background-attachment: fixed;
-   background-position: center;
+    background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 #main{
     width: 100%;
-    height: 2000px;
+    /* height: 2000px; */
     
     background-image: url("../Pictures/Capture.PNG");
 }
@@ -95,16 +95,12 @@ body, html{
    margin-right: 10%;
  }
  #position{
-   position: absolute;
-   top:8%;
-    left: 21%;
-    /* border:1px solid white; */
-    width: 1000px;  
-    height: 700px;
-    color: black;
-  
-  
-  }
+  position: absolute;
+  top:8%;
+  left: 21%;
+  height: 700px;
+  color: black;
+ }
 
 
   /* Google Fonts */
@@ -116,7 +112,7 @@ body, html{
 .line-1{
     position: relative;
     top: 50%;  
-    width: 24em;
+    /* width: 24em; */
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
     font-size: 180%;
@@ -135,9 +131,29 @@ body, html{
 }
 @keyframes typewriter{
   from{width: 0;}
-  to{width: 24em;}
+  to{width: 100%;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255,255,255,.75);}
   to{border-right-color: transparent;}
+}
+@media only screen and (max-width: 768px) {
+  #position {
+    left: 10px;
+  }
+
+  #main h1 {
+    padding-left: 10%;
+  }
+  .line-1 {
+    
+    white-space: pre-wrap;
+    overflow: hidden;
+  }
+
+  
+  #navbar a {
+    min-width: 24%;
+  }
+
 }
