--- a/CSS-Files/Aboutus.css
+++ b/CSS-Files/Aboutus.css
@@ -141,4 +141,21 @@ background-size: cover;
         margin: 0;
     }
 
+    @media only screen and (max-width: 768px) {
+        #position {
+          left: 10px;
+        }
+        #navbar a {
+          min-width: 24%;
+        }
+      
+        #main h1 {
+          padding-left: 10%;
+        }
+        .line-1 {
+          
+          white-space: pre-wrap;
+          overflow: hidden;
+        }
+      }
 }
