--- a/CSS-Files/homepagediv2.css
+++ b/CSS-Files/homepagediv2.css
@@ -2,6 +2,7 @@ body,
 html {
   height: 100%;
   margin: 0;
+  background-image: url("../Pictures/Capture.PNG");
 }
 
 #header {
@@ -13,9 +14,11 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
 }
 #main {
   width: 100%;
+  
   background-image: url("../Pictures/Capture.PNG");
 }
 
